Make populating the list of batch jobs dynamic
