# src/static/swagger.yaml
@@ -315,6 +315,20 @@ paths:
                   stderr:
                     type: string
 
+  /BatchJob/list:
+    get:
+      summary: List available batch jobs
+      description: Returns a list of available batch job names that can be executed.
+      responses:
+        '200':
+          description: List of batch job names
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+
 components:
   schemas:
     CertificateSummary:
